--- a/design.html
+++ b/design.html
@@ -5,7 +5,7 @@
         
         <style>
             body{
-                background-color: #2CFFB2;
+                background-color: #C0C0C0;
                 margin: 0 10vw;
                 font-family: Roboto;
             div{
