--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
          <div id="carousel">
             <div class="slides-container">
                 <div class="slid">
-                    <img class="slideImg" src="VPImages/myFace4.PNG" />
+                    <img class="slideImg" src="vImages/myFace4.PNG" />
                     <div class="callBox">
                         <h1 class="callAction">Hello Friend!<br/>I'm Veronica Oleson</h1>
                     </div>
         
                 </div>
                 <div class="slid">
-                    <img class="slideImg" src="VPImages/underConstruction.jpeg">
+                    <img class="slideImg" src="vImages/underConstruction.jpeg">
                     <div class="callBox">
                         <h2 class="callAction">Website in Progress</h2>
                     </div>
@@ -245,7 +245,7 @@
                 </div>
                 
                 <div class="slid">
-                    <img class="slideImg" src="VPImages/mapTravel.jpg" />
+                    <img class="slideImg" src="vImages/mapTravel.jpg" />
                     <div class="callBox">
                         <h1 class="callAction">"Life is short and the world is wide"</h1>
                     </div>
