--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <link rel="stylesheet" type="text/css" />
     </head> 
     <header>
-         <img id="logo" src="VPImages/vo_logo3.png">
+         <img id="logo" src="vImages/vo_logo3.png">
             <nav>
                  <a href="#" class="#intro">Intro</a>
                  <a href="#" class="#about">About</a>
@@ -332,7 +332,7 @@
 <!--        Link to Jquery-->
         <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
         <script src="superslideFix.js"></script>
-        <script src="veronicaoleson.js"></script>
+        <script src="index.js"></script>
         </body>
    
     
